--- a/app/css/custome.css
+++ b/app/css/custome.css
@@ -14,6 +14,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: -0.015em; }
 
+.margin10px {
+  margin: 10px; }
+
+.labelFont {
+  font-size: 16px; }
+
 .navbar {
   background-color: #da291c;
   height: 45px; }
