--- a/app/css/custome.scss
+++ b/app/css/custome.scss
@@ -25,7 +25,15 @@ body { //padding-top: 70px; \
 }
 
 
+.margin10px{
+    
+    margin: 10px;
+}
 
+.labelFont{
+    
+    font-size: 16px;
+}
 
 //Style the navbar
 
